# analyzer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  entrypoint.sh
.github/workflows/: links.yml  main.yml  rust.yml
fixtures/: git.txt  mre_raw_2020_from_api.json  torvalds-2019-git.txt  torvalds-2019.json  torvalds.json
src/: git.rs  json.rs  lib.rs  main.rs  merge.rs  parser.rs  quartiles.rs  reader.rs  types.rs
tests/: test_merger.rs  test_parser.rs
