[package]
name = "client"
version = "0.1.0"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
duct = "0.13.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
quantiles = "0.7.1"
