[package]
name = "client"
version = "0.1.0"
authors = ["Codeprints <support@codeprints.dev>"]
edition = "2018"
license = "Apache-2.0/MIT"
description = "Client to generate data about private repos for codeprints.dev"
documentation = "https://github.com/codeprintsdev/client"
homepage = "codeprints.dev"
keywords = [
    "client",
    "github",
    "contributions",
    "codeprints",
]

[[bin]]
name = "client"
path = "src/bin/client/main.rs"


[dependencies]
anyhow = "1.0.38"
duct = "0.13.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
quantiles = "0.7.1"
structopt = "0.3.21"
