[package]
name = "codeprints-analyzer"
version = "0.2.0"
authors = ["Codeprints <support@codeprints.dev>"]
edition = "2018"
license = "Apache-2.0/MIT"
description = "Tool to analyze data of git repositories for codeprints.dev"
documentation = "https://github.com/codeprintsdev/analyzer"
homepage = "codeprints.dev"
keywords = [
    "parser",
    "analyzer",
    "git",
    "github",
    "contributions",
    "codeprints",
]

[[bin]]
name = "analyzer"
path = "src/bin/analyzer/main.rs"


[dependencies]
anyhow = "1.0.38"
duct = "0.13.5"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
chrono = "0.4.19"
quantiles = "0.7.1"
structopt = "0.3.21"
